fixed comments